# bzflag-embedded

./: Makefile.am  README.Embedded  configure.ac
Xcode/: Makefile.am  config.h
Xcode/BZFlag.xcodeproj/: project.pbxproj
Xcode/Images.xcassets/AppIcon.appiconset/: Contents.json
Xcode/Images.xcassets/LaunchImage.launchimage/: Contents.json
data/: Makefile.am
include/: DrawArrays.h  EighthDimSceneNode.h  FlagSceneNode.h  FontManager.h  Makefile.am  MeshDrawInfo.h  MeshDrawMgr.h  MeshFragSceneNode.h  MeshSceneNode.h  OpenGLESStubs.h  OpenGLGState.h  OpenGLLight.h  OpenGLMaterial.h  OpenGLUtils.h  QuadWallSceneNode.h  SceneNode.h  SphereSceneNode.h  TankGeometryMgr.h  TankSceneNode.h  TriWallSceneNode.h  bzfgl.h  version.h
misc/: Template.cxx  Template.h
src/3D/: FontManager.cxx  Makefile.am  TextureFont.cxx  TextureFont.h
src/bzflag/: ActionBinding.cxx  BackgroundRenderer.cxx  BackgroundRenderer.h  ChatMenu.cxx  ChatMenu.h  ControlPanel.cxx  DisplayMenu.cxx  GUIOptionsMenu.cxx  GuidedMissleStrategy.cxx  HUDRenderer.cxx  HUDuiControl.cxx  HUDuiLabel.cxx  HUDuiList.cxx  HUDuiTextureLabel.cxx  HUDuiTypeIn.cxx  HelpMenu.cxx  JoinMenu.cxx  JoinMenu.h  LocalPlayer.cxx  MainMenu.cxx  MainWindow.h  Makefile.am  OnScreenKeyboardMenu.cxx  OnScreenKeyboardMenu.h  OptionsMenu.cxx  OptionsMenu.h  QuitMenu.cxx  RadarRenderer.cxx  SceneRenderer.cxx  ScoreboardRenderer.cxx  SegmentedShotStrategy.cxx  ServerMenu.cxx  ShockWaveStrategy.cxx  TrackMarks.cxx  WeatherRenderer.cxx  WeatherRenderer.h  World.cxx  bzflag.cxx  clientCommands.cxx  clientConfig.cxx  (+5 more)
src/common/: cURLManager.cxx
src/date/: buildDate.cxx
src/game/: DirectoryNames.cxx
src/geometry/: AnimatedTreads.cxx  BillboardSceneNode.cxx  BoltSceneNode.cxx  EighthDBaseSceneNode.cxx  EighthDBoxSceneNode.cxx  EighthDPyrSceneNode.cxx  EighthDimSceneNode.cxx  EighthDimShellNode.cxx  FlagSceneNode.cxx  FlagWarpSceneNode.cxx  LaserSceneNode.cxx  MeshDrawMgr.cxx  MeshFragSceneNode.cxx  MeshPolySceneNode.cxx  MeshRenderNode.cxx  MeshRenderNode.h  MeshSceneNode.cxx  PolyWallSceneNode.cxx  QuadWallSceneNode.cxx  SceneNode.cxx  SphereSceneNode.cxx  TankGeometryMgr.cxx  TankSceneNode.cxx  TriWallSceneNode.cxx  WallSceneNode.cxx
src/geometry/models/tank/: high_barrel.cxx  high_body.cxx  high_ltread.cxx  high_rtread.cxx  high_turret.cxx  low_barrel.cxx  low_body.cxx  (+8 more)
src/obstacle/: MeshDrawInfo.cxx
src/ogl/: DrawArrays.cxx  Makefile.am  OpenGLESStubs.cxx  OpenGLGState.cxx  OpenGLLight.cxx  OpenGLMaterial.cxx  OpenGLTexture.cxx  OpenGLUtils.cxx
src/platform/: SDL2Display.cxx  SDL2Display.h  SDL2Window.cxx
src/scene/: Occluder.cxx  Octree.cxx
