SUBDIRS = BZFlag.xcodeproj

EXTRA_DIST =	\
	BZFlag.icns \
	config.h \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-1.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-10.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-11.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-12.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-13.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-14.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-15.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-16.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-17.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-18.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-19.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-2.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-3.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-4.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-5.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-6.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-7.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-8.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized-9.png \
	Images.xcassets/AppIcon.appiconset/bzflag-sized.png \
	Images.xcassets/AppIcon.appiconset/Contents.json \
	Images.xcassets/Contents.json \
	Images.xcassets/LaunchImage.launchimage/Contents.json \
	Images.xcassets/LaunchImage.launchimage/launch-1.png \
	Images.xcassets/LaunchImage.launchimage/launch-10.png \
	Images.xcassets/LaunchImage.launchimage/launch-11.png \
	Images.xcassets/LaunchImage.launchimage/launch-12.png \
	Images.xcassets/LaunchImage.launchimage/launch-13.png \
	Images.xcassets/LaunchImage.launchimage/launch-14.png \
	Images.xcassets/LaunchImage.launchimage/launch-15.png \
	Images.xcassets/LaunchImage.launchimage/launch-16.png \
	Images.xcassets/LaunchImage.launchimage/launch-17.png \
	Images.xcassets/LaunchImage.launchimage/launch-18.png \
	Images.xcassets/LaunchImage.launchimage/launch-19.png \
	Images.xcassets/LaunchImage.launchimage/launch-2.png \
	Images.xcassets/LaunchImage.launchimage/launch-3.png \
	Images.xcassets/LaunchImage.launchimage/launch-4.png \
	Images.xcassets/LaunchImage.launchimage/launch-5.png \
	Images.xcassets/LaunchImage.launchimage/launch-6.png \
	Images.xcassets/LaunchImage.launchimage/launch-7.png \
	Images.xcassets/LaunchImage.launchimage/launch-8.png \
	Images.xcassets/LaunchImage.launchimage/launch-9.png \
	Images.xcassets/LaunchImage.launchimage/launch.png

MAINTAINERCLEANFILES = \
	Makefile.in
